# heimdall-rs

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  FUNDING.json  LICENSE  Makefile  QUICKSTART_60_SECONDS.md  README.md  a2.tex  debug_multicall.rs  dump.rdb  less  rustfmt.toml  src.asm  test.txt  test_decode_flow.rs  test_multicall_debug.rs
cache/: Cargo.toml  README.md
cache/src/: error.rs  lib.rs  tests.rs  util.rs
cli/: Cargo.toml
cli/src/: error.rs  main.rs  output.rs
common/: Cargo.toml  README.md
common/src/: constants.rs  consts.rs  disassemble.rs  error.rs  lib.rs  opcodes.rs  utils.rs
common/src/eth/: disassemble.rs
common/src/ether/: bytecode.rs  compiler.rs  disassemble.rs  mod.rs  opcodes.rs  rpc.rs  selectors.rs  signatures.rs  solidity.rs  tests.rs  util.rs  yul.rs
common/src/ether/evm/: disassemble.rs  log.rs  memory.rs  mod.rs  opcodes.rs  stack.rs  storage.rs  tests.rs  types.rs  vm.rs
common/src/ether/lexers/: cleanup.rs  mod.rs  solidity.rs  yul.rs
common/src/io/: clipboard.rs  file.rs  logging.rs  mod.rs  tests.rs
common/src/resources/: mod.rs  openai.rs  range_map.rs  transpose.rs
common/src/testing/: benchmarks.rs  mod.rs  tests.rs
common/src/utils/: env.rs  hex.rs  http.rs  integers.rs  iter.rs  mod.rs  random.rs  range_map.rs  strings.rs  sync.rs  tests.rs  threading.rs  time.rs  version.rs
common/src/utils/io/: file.rs  logging.rs  macros.rs  mod.rs  types.rs
common/src/utils/testing/: benchmarks.rs  mod.rs  tests.rs
config/: Cargo.toml
config/src/: error.rs  lib.rs
crates/cache/: Cargo.toml  README.md
crates/cache/src/: error.rs  lib.rs  util.rs
crates/cfg/: Cargo.toml  README.md
crates/cfg/src/: error.rs  lib.rs
crates/cfg/src/core/: graph.rs  mod.rs
crates/cfg/src/interfaces/: args.rs  function.rs  mod.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: args.rs  error.rs  log_args.rs  main.rs  output.rs
crates/common/: Cargo.toml  README.md
crates/common/src/: constants.rs  error.rs  lib.rs
crates/common/src/ether/: bytecode.rs  calldata.rs  compiler.rs  etherscan.rs  http_or_ws_or_ipc.rs  mod.rs  provider.rs  rpc.rs  selectors.rs  signatures.rs  tokenize.rs  types.rs
crates/common/src/resources/: mod.rs  openai.rs  openrouter.rs  transpose.rs
crates/common/src/utils/: env.rs  function.rs  hex.rs  http.rs  integers.rs  iter.rs  mod.rs  precompile.rs  range_map.rs  strings.rs  sync.rs  threading.rs  time.rs  version.rs
crates/config/: Cargo.toml  README.md
crates/config/src/: error.rs  lib.rs
crates/core/: Cargo.toml  README.md
crates/core/benches/: bench_cfg.rs  bench_decode.rs  bench_decompile.rs  bench_disassemble.rs  bench_inspect.rs
crates/core/src/: error.rs  heimdall.rs  lib.rs
crates/core/src/cfg/: mod.rs
crates/core/src/decode/: mod.rs
crates/core/src/decompile/: mod.rs  resolve.rs  util.rs
crates/core/src/disassemble/: mod.rs
crates/core/src/dump/: constants.rs  mod.rs
crates/core/src/inspect/: mod.rs
crates/core/src/snapshot/: analyze.rs  constants.rs  mod.rs  resolve.rs
crates/core/tests/: test_cfg.rs  test_decode.rs  test_decompile.rs  test_disassemble.rs  test_inspect.rs  test_snapshot.rs  test_vyper_selectors.rs
crates/decode/: Cargo.toml  README.md
crates/decode/src/: error.rs  lib.rs
crates/decode/src/core/: mod.rs
crates/decode/src/interfaces/: args.rs  mod.rs  result.rs
crates/decode/src/utils/: abi.rs  constructor.rs  mod.rs  multicall.rs
crates/decompile/: Cargo.toml  DESIGN.md
crates/decompile/benches/: ir_pipeline.rs
crates/decompile/src/: error.rs  lib.rs
crates/decompile/src/core/: analyze.rs  mod.rs  postprocess.rs  resolve.rs
crates/decompile/src/interfaces/: args.rs  function.rs  mod.rs
crates/decompile/src/ir/: README.md  emit.rs  mod.rs  parser.rs  tests.rs  tokenizer.rs  types.rs
crates/decompile/src/utils/: constants.rs  mod.rs  precompile.rs
crates/disassemble/: Cargo.toml  README.md
crates/disassemble/src/: error.rs  lib.rs
crates/disassemble/src/core/: mod.rs
crates/disassemble/src/interfaces/: args.rs  mod.rs
crates/dump/: Cargo.toml
crates/dump/src/: error.rs  lib.rs
crates/dump/src/core/: mod.rs
crates/dump/src/interfaces/: args.rs  mod.rs  row.rs
crates/inspect/: Cargo.toml  README.md
crates/inspect/src/: error.rs  lib.rs
crates/tracing/: Cargo.toml  README.md
crates/tracing/src/: formatter.rs  layers.rs  lib.rs
crates/vm/: Cargo.toml
crates/vm/benches/: bench_erc20_transfer.rs  bench_fib.rs  bench_ten_thousand_hashes.rs
crates/vm/src/: lib.rs
crates/vm/tests/: test_vyper_selectors.rs
examples/cfg/: Cargo.toml
examples/cfg/src/: main.rs
examples/decode_offline/: Cargo.toml  all_selectors.csv  canonical.yaml
examples/decode_offline/src/: main.rs
examples/disassemble/: Cargo.toml
examples/disassemble/src/: main.rs
examples/dump/: Cargo.toml
examples/dump/src/: main.rs
examples/inspect/: Cargo.toml
examples/inspect/src/: main.rs
heimdall/: Cargo.toml  contracts.txt  example.dot
heimdall/examples/: cfg.rs  decode.rs  decompile.rs  snapshot.rs
heimdall/output/: bytecode.evm  disassembled.asm
heimdall/output/0x7f268357a8c2552623316e2562d90e642bb538e5/: disassembled.asm
heimdall/output/0xb4e16d0168e52d35cacd2c6185b44281ec28c9dc/: disassembled.asm
heimdall/output/local/: bytecode.evm  disassembled.asm
heimdall/scripts/: benchmark  execute.py  test
heimdall/src/: heimdall.rs  lib.rs
heimdall/src/cfg/: constants.rs  graph.rs  mod.rs  output.rs  tests.rs  util.rs
heimdall/src/decode/: mod.rs  tests.rs  util.rs
heimdall/src/decompile/: analyze.rs  constants.rs  mod.rs  output.rs  postprocess.rs  precompile.rs  resolve.rs  tests.rs  util.rs
heimdall/src/dump/: constants.rs  mod.rs  tests.rs  util.rs
heimdall/src/monitor/: mod.rs  tests.rs
heimdall/src/snapshot/: analyze.rs  constants.rs  mod.rs  resolve.rs  util.rs
heimdall/src/trace/: mod.rs  tests.rs  util.rs
heimdall/tests/: test_cfg.rs  test_decode.rs  test_decompile.rs  test_disassemble.rs  test_snapshot.rs
scripts/: bump  (+5 more)
(+274 files in other folders)
