[workspace]
members = [
    "crates/disassemble",
    "crates/decompile",
    "crates/tracing",
    "crates/inspect",
    "crates/decode",
    "crates/common",
    "crates/config",
    "crates/cache",
    "crates/core",
    "crates/dump",
    "crates/cli",
    "crates/cfg",
    "crates/vm",
]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[profile.release]
strip = "debuginfo"
lto = "fat"
codegen-units = 1
incremental = false

[profile.dev]
strip = "none"
lto = "thin"
debug = true

[workspace.package]
version = "0.9.1"
edition = "2021"
license = "MIT"
rust-version = "1.87"
homepage = "https://heimdall.rs"
repository = "https://github.com/Jon-Becker/heimdall-rs"
keywords = ["ethereum", "web3", "decompiler", "evm", "crypto"]
exclude = [".github/"]

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"

[workspace.lints.clippy]
# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
branches_sharing_code = "warn"
clear_with_drain = "warn"
derive_partial_eq_without_eq = "warn"
empty_line_after_outer_attr = "warn"
equatable_if_let = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_with_drain = "warn"
large_stack_frames = "warn"
manual_clamp = "warn"
mutex_integer = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
uninhabited_references = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
useless_let_if_seq = "warn"

# These are nursery lints which have findings. Allow them for now. Some are not
# quite mature enough for use in our codebase and some we don't really want.
# Explicitly listing should make it easier to fix in the future.
as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
collection_is_never_read = "allow"
debug_assert_with_mut_call = "allow"
empty_line_after_doc_comments = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
iter_on_single_items = "allow"
missing_const_for_fn = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
option_if_let_else = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
string_lit_as_bytes = "allow"
type_repetition_in_bounds = "allow"
unnecessary_struct_initialization = "allow"
use_self = "allow"

[workspace.dependencies]
heimdall-core = { path = "crates/core" }
heimdall-cache = { path = "crates/cache" }
heimdall-cli = { path = "crates/cli" }
heimdall-common = { path = "crates/common" }
heimdall-config = { path = "crates/config" }
heimdall-tracing = { path = "crates/tracing" }

# core mods
heimdall-cfg = { path = "crates/cfg" }
heimdall-dump = { path = "crates/dump" }
heimdall-inspect = { path = "crates/inspect" }
heimdall-decoder = { path = "crates/decode" }
heimdall-decompiler = { path = "crates/decompile" }
heimdall-disassembler = { path = "crates/disassemble" }
heimdall-vm = { path = "crates/vm" }

clap = { version = "4", features = ["derive"] }
thiserror = "1.0.50"
eyre = "0.6.12"
tracing = "0.1.40"
futures = "0.3.30"
derive_builder = "0.12.0"
alloy-json-abi = "1.0"
lazy_static = "1.4.0"
fancy-regex = "0.11.0"
hashbrown = "0.14.5"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
colored = "2"
alloy-dyn-abi = "1.0"
alloy = { version = "1.0", features = [
    "full",
    "rpc-types-debug",
    "rpc-types-trace",
] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.51"
rand = "0.8.5"
indicatif = "0.17.0"
petgraph = "0.6.2"
async-openai = "0.26.0"
crossbeam-channel = "0.5.7"
strsim = "0.10.0"
async-recursion = "1.0.5"
chrono = "0.4.31"
backoff = { version = "0.4.0", features = ["tokio"] }
reqwest = { version = "0.12", features = ["blocking"] }
bincode = "1.3.3"
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
    "json",
] }
bytes = "1.6.1"
tokio-retry = "0.3.0"
mesc = "0.2.0"
toml = "0.7.6"
serial_test = "3.0.0"
async-convert = "1.0.0"
tracing-appender = "0.2.3"
tracing-journald = "0.3"
tracing-logfmt = "0.3.3"
rolling-file = "0.2.0"
paste = "1.0.15"
once_cell = "1.19"
criterion = { version = "0.5.1", features = ["async_futures", "async_tokio"] }
memory-stats = "1.0.0"
serde_yaml = "0.9.31"
