[package]
name = "heimdall-cache"
version = "0.4.8"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Cache management for Heimdall."
keywords = ["ethereum", "web3", "decompiler", "evm", "crypto"]

[dependencies]
clap-verbosity-flag = "1.0.0"
clap = { version = "3.1.18", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.7.6" }
bincode = "1.3.3"
