[package]
name = "heimdall-cache"
version = "0.6.5"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Cache management for Heimdall."
keywords = ["ethereum", "web3", "decompiler", "evm", "crypto"]

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
