[package]
name = "heimdall-common"
version = "0.1.7"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Commonly used resources for heimdall modules."
keywords = ["ethereum", "web3", "decompiler", "evm", "crypto"]

[dependencies]
colored = "2"
regex = "1.1.5"
lazy_static = "1.4.0"
clap-verbosity-flag = "1.0.0"
indicatif = "0.17.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "3.1.18", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["blocking"] }
serde_json = "1.0"
ethers = "1.0.0"