[package]
name = "heimdall-common"
version = "0.4.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Commonly used resources for heimdall modules."
keywords = ["ethereum", "web3", "decompiler", "evm", "crypto"]

[dependencies]
colored = "2"
fancy-regex = "0.10.0"
lazy_static = "1.4.0"
clap-verbosity-flag = "1.0.0"
indicatif = "0.17.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "3.1.18", features = ["derive"] }
ethers = { version = "=2.0.0" }
reqwest = { version = "0.11.11", features = ["blocking"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
heimdall-cache = { path = "./../cache" }
crossbeam-channel = "0.5.7"