[package]
description = "Commonly used resources for heimdall modules."
edition = "2021"
keywords = ["ethereum", "web3", "decompiler", "evm", "crypto"]
license = "MIT"
name = "heimdall-common"
readme = "README.md"
version = "0.4.8"

[dependencies]
async-openai = "0.10.0"
clap = {version = "3.1.18", features = ["derive"]}
clap-verbosity-flag = "1.0.0"
colored = "2"
crossbeam-channel = "0.5.7"
ethers = "2.0.4"
fancy-regex = "0.11.0"
heimdall-cache = {path = "./../cache"}
indicatif = "0.17.0"
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = {version = "0.11.11", features = ["blocking"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
