[package]
name = "heimdall-config"
version = "0.4.8"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Configuration management for Heimdall."
keywords = ["ethereum", "web3", "decompiler", "evm", "crypto"]

[dependencies]
heimdall-common = { path = "./../common" }
clap-verbosity-flag = "1.0.0"
clap = { version = "3.1.18", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.7.6" }
