[package]
description = "Heimdall is an advanced Ethereum smart contract toolkit for forensic and heuristic analysis."
edition = "2021"
keywords = ["ethereum", "web3", "decompiler", "evm", "crypto"]
license = "MIT"
name = "heimdall"
readme = "README.md"
version = "0.1.2"

[dependencies]
colored = "2"
clap = {version = "3.1.18", features = ["derive"]}
clap-verbosity-flag = "1.0.0"
ethers = {git = "https://github.com/gakonst/ethers-rs"}
heimdall-common = {path = "./../common"}
heimdall-config = {path = "./../config"}
tokio = {version = "1", features = ["full"]}
serde_json = "1.0"
indicatif = "0.17.0"
strsim = "0.10.0"

[[bin]]
name = "heimdall"
path = "src/heimdall.rs"
