[package]
description = "Heimdall is an advanced Ethereum smart contract toolkit for forensic and heuristic analysis."
edition = "2021"
keywords = ["ethereum", "web3", "decompiler", "evm", "crypto"]
license = "MIT"
name = "heimdall"
readme = "README.md"
version = "0.2.5"

[dependencies]
backtrace = "0.3"
colored = "2"
clap = { version = "3.1.18", features = ["derive"] }
clap-verbosity-flag = "1.0.0"
ethers = "1.0.0"
heimdall-common = { path = "./../common" }
heimdall-config = { path = "./../config" }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.17.0"
strsim = "0.10.0"
fancy-regex = "0.10.0"
lazy_static = "1.4.0"

[[bin]]
name = "heimdall"
path = "src/heimdall.rs"
