[package]
description = "Heimdall is an advanced Ethereum smart contract toolkit for forensic and heuristic analysis."
edition = "2021"
keywords = ["ethereum", "web3", "decompiler", "evm", "crypto"]
license = "MIT"
name = "heimdall"
readme = "README.md"
version = "0.5.0"

[dependencies]
backtrace = "0.3"
clap = {version = "3.1.18", features = ["derive"]}
clap-verbosity-flag = "1.0.0"
colored = "2"
crossterm = "0.26.1"
dot = "0.1.4"
ethers = "2.0.4"
fancy-regex = "0.11.0"
heimdall-cache = {path = "./../cache"}
heimdall-common = {path = "./../common"}
heimdall-config = {path = "./../config"}
indicatif = "0.17.0"
lazy_static = "1.4.0"
petgraph = "0.6.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
strsim = "0.10.0"
tokio = {version = "1", features = ["full"]}
tui = "0.19"

[[bin]]
name = "heimdall"
path = "src/heimdall.rs"
