[package]
name = "heimdall-cache"
description = "Cache management for Heimdall."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
thiserror = "1.0.50"
eyre = "0.6.12"
tracing = "0.1.40"
