[package]
name = "heimdall-cfg"
description = "Generate a visual control flow graph for EVM bytecode"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true

[lints]
workspace = true

[lib]
bench = false

[dependencies]
heimdall-config = { workspace = true }
heimdall-common = { workspace = true }
heimdall-cache = { workspace = true }
thiserror = "1.0.50"
clap = { workspace = true, features = ["derive"] }
derive_builder = "0.12.0"
tracing = "0.1.40"
eyre = "0.6.12"
futures = "0.3.30"
lazy_static = "1.4.0"
petgraph = "0.6.2"
alloy = { version = "1.0", features = [
    "full",
    "rpc-types-debug",
    "rpc-types-trace",
] }

heimdall-disassembler.workspace = true
heimdall-vm.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }