[package]
name = "heimdall-cli"
description = "CLI for the heimdall-rs toolkit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true

[dependencies]
backtrace = "0.3"
clap = {version = "3.1.18", features = ["derive"]}
clap-verbosity-flag = "1.0.0"
colored = "2"
crossterm = "0.26.1"
heimdall-cache = {path = "./../cache"}
heimdall-core = {path = "./../core"}
heimdall-common = {path = "./../common"}
heimdall-config = {path = "./../config"}
tokio = {version = "1", features = ["full"]}
tui = "0.19"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[[bin]]
name = "heimdall"
path = "src/main.rs"
