[package]
name = "heimdall-cli"
description = "CLI for the heimdall-rs toolkit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true

[dependencies]
clap = {version = "3.1.18", features = ["derive"]}
colored = "2"
heimdall-tracing = { workspace = true }
heimdall-cache = { workspace = true }
heimdall-core = { workspace = true }
heimdall-common = { workspace = true }
heimdall-config = { workspace = true }
tokio = {version = "1", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
eyre = "0.6.12"
alloy-json-abi = "0.7.0"

[[bin]]
name = "heimdall"
path = "src/main.rs"
