[package]
name = "heimdall-cli"
description = "CLI for the heimdall-rs toolkit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
colored.workspace = true
heimdall-tracing = { workspace = true }
heimdall-cache = { workspace = true }
heimdall-core = { workspace = true }
heimdall-common = { workspace = true }
heimdall-config = { workspace = true }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3.18"
eyre.workspace = true
alloy-json-abi.workspace = true
alloy.workspace = true
async-trait.workspace = true

[lints]
workspace = true


[[bin]]
name = "heimdall"
path = "src/main.rs"
bench = false
