[package]
name = "heimdall-common"
description = "Commonly used resources for heimdall modules."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true

[lib]
bench = false

[lints]
workspace = true

[dependencies]
async-openai.workspace = true
clap = { workspace = true, features = ["derive"] }
colored.workspace = true
crossbeam-channel.workspace = true
fancy-regex.workspace = true
heimdall-cache = { workspace = true }
indicatif.workspace = true
lazy_static.workspace = true
rand.workspace = true
reqwest = { version = "0.12", features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
strsim.workspace = true
async-recursion = "1.0.5"
async-trait.workspace = true
chrono = "0.4.31"
backoff = { version = "0.4.0", features = ["tokio"] }
thiserror.workspace = true
tracing.workspace = true
eyre.workspace = true
alloy-json-abi = { version = "1.0", features = ["serde_json"] }
futures = "0.3.17"
alloy.workspace = true
bytes = "1.6.1"
alloy-dyn-abi.workspace = true
tokio-retry = "0.3.0"
hashbrown.workspace = true
