[package]
name = "heimdall-config"
description = "Configuration management for Heimdall."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true

[lib]
bench = false

[lints]
workspace = true

[dependencies]
heimdall-common = { workspace = true }
clap = { workspace = true, features = ["derive"] }
mesc = { workspace = true }
serde.workspace = true
toml = { workspace = true }
thiserror.workspace = true
serial_test = { workspace = true }
tracing.workspace = true
