[package]
name = "heimdall-core"
description = "Heimdall is an advanced Ethereum smart contract toolkit for forensic and heuristic analysis."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true

[lib]
bench = false

[lints]
workspace = true

[dependencies]
async-recursion = "1.0.5"
thiserror.workspace = true
clap = { workspace = true, features = ["derive"] }
colored.workspace = true
fancy-regex.workspace = true
heimdall-cache = { workspace = true }
heimdall-common = { workspace = true }
heimdall-config = { workspace = true }
indicatif.workspace = true
lazy_static.workspace = true
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
strsim.workspace = true
tokio.workspace = true
derive_builder.workspace = true
async-convert = "1.0.0"
futures.workspace = true
tracing.workspace = true
alloy-json-abi = { version = "1.0", features = ["serde_json"] }

# modules
heimdall-cfg = { workspace = true }
heimdall-dump = { workspace = true }
heimdall-decoder = { workspace = true }
heimdall-inspect = { workspace = true }
heimdall-decompiler = { workspace = true }
heimdall-disassembler = { workspace = true }


[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_futures", "async_tokio"] }
memory-stats = "1.0.0"

[[bench]]
name = "bench_cfg"
harness = false

[[bench]]
name = "bench_decode"
harness = false

[[bench]]
name = "bench_decompile"
harness = false

[[bench]]
name = "bench_disassemble"
harness = false

[[bench]]
name = "bench_inspect"
harness = false
