[package]
name = "heimdall-decoder"
description = "Decodes raw/arbitrary calldata into readable types"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true

[lib]
bench = false

[lints]
workspace = true

[dependencies]
heimdall-config = { workspace = true }
heimdall-common = { workspace = true }
heimdall-cache = { workspace = true }
thiserror = "1.0.50"
clap = { workspace = true, features = ["derive"] }
derive_builder = "0.12.0"
tracing = "0.1.40"
eyre = "0.6.12"
heimdall-vm.workspace = true
alloy-dyn-abi = "1.0"
alloy-json-abi = "1.0"
alloy = { version = "1.0", features = [
    "full",
    "rpc-types-debug",
    "rpc-types-trace",
] }
serde_json = "1.0"
hashbrown = "0.14.5"
serde = "1.0"
