[package]
name = "heimdall-decoder"
description = "Decodes raw/arbitrary calldata into readable types"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true

[lib]
bench = false

[lints]
workspace = true

[dependencies]
heimdall-config = { workspace = true }
heimdall-common = { workspace = true }
heimdall-cache = { workspace = true }
thiserror.workspace = true
clap = { workspace = true, features = ["derive"] }
derive_builder.workspace = true
tracing.workspace = true
eyre = "0.6.12"
heimdall-vm.workspace = true
alloy-dyn-abi = "1.0"
alloy-json-abi.workspace = true
alloy = { version = "1.0", features = [
    "full",
    "rpc-types-debug",
    "rpc-types-trace",
] }
serde_json = "1.0"
hashbrown.workspace = true
serde = "1.0"
