[package]
name = "heimdall-decompiler"
description = "Decompiles EVM bytecode to human-readable representations"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true

[lib]
bench = false

[dependencies]
heimdall-config = { workspace = true }
heimdall-common = { workspace = true }
heimdall-cache = { workspace = true }
heimdall-decoder = { workspace = true }
thiserror = "1.0.50"
clap = { workspace = true, features = ["derive"] }
derive_builder = "0.12.0"
alloy-json-abi = "0.8.3"
tracing = "0.1.40"
eyre = "0.6.12"
futures = "0.3.30"
lazy_static = "1.4.0"
fancy-regex = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
alloy-dyn-abi = "0.8.3"
alloy = { version = "0.3.3", features = [
    "full",
    "rpc-types-debug",
    "rpc-types-trace",
] }
hashbrown = "0.14.5"
tokio = { version = "1", features = ["full"] }

heimdall-vm.workspace = true
