[package]
name = "heimdall-decompiler"
description = "Decompiles EVM bytecode to human-readable representations"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true

[lib]
bench = false

[lints]
workspace = true

[dependencies]
heimdall-config.workspace = true
heimdall-common.workspace = true
heimdall-cache.workspace = true
heimdall-decoder.workspace = true
thiserror.workspace = true
clap = { workspace = true, features = ["derive"] }
derive_builder.workspace = true
alloy-json-abi.workspace = true
tracing.workspace = true
eyre.workspace = true
futures.workspace = true
lazy_static.workspace = true
fancy-regex.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
alloy-dyn-abi = "1.0.11"
alloy = { version = "1.0.11", features = [
  "full",
  "rpc-types-debug",
  "rpc-types-trace",
] }
hashbrown.workspace = true
tokio.workspace = true

heimdall-disassembler.workspace = true
heimdall-vm.workspace = true
